# plc

./: .gitignore  0001-backend-of-the-parser.patch  Cargo.toml  README.md  check.scl  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub
backend/: Cargo.toml  check2.xml  check3.il  policy.json
backend/src/: ast.rs  main.rs
backend/src/rules/: rule11_12.rs  rule15.rs  rule17.rs  rule18.rs  rule2.rs  rule20.rs  rule7.rs  rule8.rs
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/components/: FileInput.tsx  Header.tsx  InfoPage.tsx  PolicyInput.tsx  Results.tsx  ResultsChart.tsx  ViolationCard.tsx  ViolationFrequencyChart.tsx
frontend/wasm/: package.json  plc_secure_checker.d.ts  plc_secure_checker.js  plc_secure_checker_bg.wasm  plc_secure_checker_bg.wasm.d.ts
src/: lib.rs  main.rs
src/parser/: il.rs  mod.rs  plcopen.rs  scl.rs
src/rules/: mod.rs  policy.rs  rule1.rs  rule10.rs  rule16.rs  rule19.rs  rule4.rs  rule5.rs  rule6.rs  rule7.rs  rule9.rs
